[package]
name = "kickmyb-exploit"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", features = ["json", "cookies"] }
tokio = { version = "1", features = ["full"] }
tui = "0.19"
crossterm = "0.26"
argh = "0.1.10"
rand = "0.8.5"
tui-textarea = "0.2.0"
serde = "1.0.160"
