[package]
name = "joris-api-decimation-initiative"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", features = ["json", "cookies"] }
tokio = { version = "1", features = ["full"] }
tui = "0.19"
crossterm = "0.26"
argh = "0.1.10"
rand = "0.8.5"
serde = "1.0.160"
throbber-widgets-tui = "0.1.3"
futures-util = "0.3.28"
select = "0.6.0"
